[project]
name = "alloria"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Guilhem Saurel", email = "guilhem.saurel@laas.fr" }
]
requires-python = ">=3.13"
dependencies = [
    "aiomqtt>=2.4.0",
]
license = "MIT"

[project.scripts]
alloria = "alloria:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
